hi-kube/nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: myapp-dev
spec:
  containers:
  - name: nginx
    image: nginx:alpine
